--- a/template/styles.css
+++ b/template/styles.css
@@ -5,14 +5,14 @@
   font-family: "Gentium";
   font-style: normal;
   font-weight: normal;
-  src: url(GenBasR.ttf)
+  src: url(GentiumPlus-R.ttf)
 }
 
 @font-face {
   font-family: "Gentium";
   font-style: italic;
   font-weight: normal;
-  src: url(GenBasI.ttf)
+  src: url(GentiumPlus-I.ttf)
 }
 
 @font-face {
@@ -20,6 +20,20 @@
   font-style: normal;
   font-weight: bold;
   src: url(GenBasB.ttf)
+}
+
+@font-face {
+  font-family: "GentiumSMCP";
+  font-style: normal;
+  font-weight: normal;
+  src: url(GentiumPlus-R-smcp.woff)
+}
+
+@font-face {
+  font-family: "GentiumSMCP";
+  font-style: italic;
+  font-weight: normal;
+  src: url(GentiumPlus-I-smcp.woff)
 }
 
 body {
@@ -63,7 +77,7 @@ div {
 }
 
 .qau:before, .au:before {
-  content: "–";
+  content: "– ";
 }
 
 *+.hw:before {
@@ -82,18 +96,15 @@ div {
   white-space:pre;
 }
 
-.q+.sn:before, .cs .sd:before {
+.q + .sn:before, .cs .sd:before, .q + .sd:before  {
   content:"";
   white-space:initial;
 }
 
-.au {
+.au, .qau {
   font-size: 90%;
 }
 
-.qau {
-  font-size: 79%;
-}
 
 .xex, .it, .title, .stype, .part, .parts, .membof, .member,
 .members, .corr, .qperson, .prod, .prodmac, .stage, .stageof,
@@ -105,14 +116,6 @@ div {
   font-style: italic;
 }
 
-.col:before, .sn:before {
-  content:"\A"; white-space:pre;
-}
-
-.block+.hw:before {
-  content:"\A\A"; white-space:pre;
-}
-
 .q {
   font-size: 86%;
   line-height: 1.3;
@@ -121,10 +124,23 @@ div {
 }
 
 .u, .plw, .er {
-  font-variant: small-caps;
   underline: none;
   text-decoration: none;
 }
+
+.u, .plw, .er {
+  font-family: 'GentiumSMCP';
+}
+
+@supports(font-feature-settings: 'smcp') {
+    .u, .plw, .er {
+        font-family: inherit
+        font-variant: normal;
+        font-feature-settings: 'smcp';
+    }
+}
+
+
 
 .sn {
   font-weight:bold;
