--- a/template/styles.css
+++ b/template/styles.css
@@ -1,33 +1,16 @@
 @charset "UTF-8";
 @namespace d url(http://www.apple.com/DTDs/DictionaryService-1.0.rng);
 
-@font-face {
-  font-family: "Gentium";
-  font-style: normal;
-  font-weight: normal;
-  src: url(GentiumPlus-R.ttf)
-}
-
-@font-face {
-  font-family: "Gentium";
-  font-style: italic;
-  font-weight: normal;
-  src: url(GentiumPlus-I.ttf)
-}
-
-@font-face {
-  font-family: "Gentium";
-  font-style: normal;
-  font-weight: bold;
-  src: url(GenBasB.ttf)
-}
-
 body {
+  font: -apple-system-body;
+  margin-left: 0.9em;
+  margin-right: 0.9em;
+  margin-top: 1em;
+  margin-bottom: 1.5em;
   line-height: 1.3;
 }
-
-body, .block {
-  font-family: Gentium;
+html.apple_client-panel body {
+  margin-top: 0em;
 }
 
 div {
@@ -35,12 +18,24 @@ div {
 }
 
 .hw {
-  font-size: 134%;
-  font-weight: bold;
-  color: maroon;
-  margin-bottom: -3px;
+  font-size: 170%;
   display: inline;
-  line-height: 0.85;
+  line-height: 150%;
+  font-weight: normal;
+}
+.pr,
+.ety {
+  color: -apple-system-secondary-label;
+}
+
+table {
+  table-layout: fixed;
+  width: 90%;
+  margin-top: 1em;
+  margin-left: 14px; /*if indent 30px*/
+  border-style: solid;
+  border-width: 1px;
+  font-weight: normal;
 }
 
 .col {
@@ -66,9 +61,9 @@ div {
   content: "– ";
 }
 
-*+.hw:before {
-  content: "\A\A";
-  white-space:pre;
+* + .hw:before, .col:before {
+  content: '\A\A';
+  white-space: pre;
 }
 
 .q+.hw:before {
@@ -85,6 +80,10 @@ div {
 .q + .sn:before, .cs .sd:before, .q + .sd:before, .def .sn:before, .def .sd:before  {
   content:"";
   white-space:initial;
+}
+
+:not(.sn):not(.sd):not(.fld) + .def {
+  display: block;
 }
 
 .au, .qau {
@@ -127,8 +126,5 @@ html {
   .hw {
     /* blue is more readable on the dark background than maroon */
     color: -webkit-link;
-  }
-  img {
-    filter: invert(100%);
   }
 }
